syntax = "proto3";

package auth;

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  string first_name = 4;
  string last_name = 5;
}

message LoginRequest {
  string identifier = 1;  // email ou username
  string password = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message User {
  string id = 1;
  string email = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  int64 created_at = 6;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
  string token = 4;
  repeated string errors = 5;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
  string token = 4;
  repeated string errors = 5;
}

message ValidateTokenResponse {
  bool valid = 1;
  User user = 2;
  string message = 3;
}